# jsonschema-extras

./: .editorconfig  .flake8  .gitignore  .mypy-precommit.ini  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  pylintrc.toml  pyproject.toml  pytest.toml  tox.toml  uv.toml
.github/workflows/: _build-dist.yml  _build-docs.yml  _deploy-docs.yml  _tests.yml  deploy-docs.yml  publish-testpypi.yml  publish.yml  release.yml  test.yml
docs/source/: conf.py  filesystem.rst  formats.rst  global.rst  index.rst  jsonschema_extras.formats.rst  jsonschema_extras.formats.slice_string.rst  jsonschema_extras.registries.filesystem.rst  jsonschema_extras.registries.retrieval.json.rst  jsonschema_extras.registries.retrieval.rst  jsonschema_extras.registries.rst  jsonschema_extras.rst  misc.rst  modules.rst  nitpick_ignore_regex.csv  schemas.rst
docs/source/_ext/: jsonschema.py  jsonschema_format.py
docs/source/_templates/: _global.j2
docs/source/_templates/formats/: format.rst.j2
docs/source/_templates/schemas/: _schema_content.rst.j2  index.rst.j2  schema.rst.j2  schemas_all.rst.j2
docs/source/api/: jsonschema_extras.formats.numbers_range.rst  jsonschema_extras.formats.rst  jsonschema_extras.registries.retrieval.rst  jsonschema_extras.registries.rst  jsonschema_extras.rst  jsonschema_extras.typing.rst
docs/source/formats/: index.rst
docs/source/schemas/: index.rst
docs/source/schemas/common/: range.rst  range_integer.rst  slice_object.rst  slice_string.rst
docs/utils/: __init__.py  apidoc.py  generate_schema_docs.py
docs/utils/common/: __init__.py  _meta.py  ext.py  rst.py
jsonschema_extras/: .editorconfig  __init__.py  _common.py  _util.py  typing.py
jsonschema_extras/_util/: __init__.py  uri.py
jsonschema_extras/_util/tests/: test_uri.py
jsonschema_extras/formats/: __init__.py  _common.py  numbers_range.py  slice_string.py
jsonschema_extras/formats/tests/: test_numbers_range.py  test_slice_string.py
jsonschema_extras/registries/: __init__.py  _common.py  filesystem.py
jsonschema_extras/registries/retrieval/: __init__.py  _common.py  json.py
jsonschema_extras/registries/tests/: test_filesystem.py
jsonschema_extras/schemas/common/: range.json  range_integer.json  slice_object.json  slice_string.json
