[build-system]
requires = ["setuptools >=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonschema-extras"
# XXX: PyPI web rendering glitches a lot when a email address is not present
authors = [{ name = "Viacheslav Syropiatov", email = "nonexistent@example.com" }]
description = "Utilities for working with the Python library 'jsonschema'"
readme = "README.md"
license = "MIT"
keywords = [
    "json",
    "json schema",
    "jsonschema",
    "validation",
    "extras",
    "utilities",
    "utils",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = [
    "jsonschema ~=4.26.0",
    "types-jsonschema",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/asrelo/jsonschema-extras"
documentation = "https://asrelo.github.io/jsonschema-extras"
issues = "https://github.com/asrelo/jsonschema-extras/issues"

[dependency-groups]
dev = [
    "flake8 ~=7.3",
    "flake8-bugbear >=24.8.19",
    "flake8-comprehensions ~=3.17",
    "flake8-docstrings ~=1.7",
    "flake8-isort ~=7.0",
    "flake8-quotes ~=3.4",
    "furo >=2025.12.19",
    "Jinja2 ~=3.1",
    "mypy ~=2.1",
    "pep8-naming ~=0.15.0",
    "pytest ~=9.0",
    "sphinx ~=9.0",
    "sphinx-autodoc-typehints ~=3.10",
    "sphinx-copybutton ~=0.5.2",
    'sphinx-design ~=0.7.0',
    # XXX: sphinx-jsonschema is good but incomplete
    #"sphinx-jsonschema >=1.19.2,<2",
    "tox ~=4.46",
    "types-docutils",
    "types-Jinja2",
]

[tool.setuptools.package-data]
jsonschema_extras = [
    "VERSION",
    "schemas/**.json",
]

[tool.setuptools.dynamic]
version = { file = ["jsonschema_extras/VERSION"] }

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3   # Vertical Hanging Indent
lines_after_imports = 2
include_trailing_comma = true
force_sort_within_sections = true
no_inline_sort = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = ["LOCALFOLDER"]

[tool.mypy]
python_version = "3.12"
strict = true
#pretty = true
exclude = [
    "^docs/",
]

[[tool.mypy.overrides]]
module = "*.tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "docs.utils.*"
disallow_untyped_defs = false
